# Soul-Editor

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
Resources/Documentation/Wiki/: Home.md
Source/: CMakeLists.txt  Editor.cpp  Editor.h
Tools/Conan/: conanfile.txt  conanfile.txt.junk
